--- a/style.css
+++ b/style.css
@@ -3,11 +3,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
-  /* background-color: #444; */
-  /* text-align: center; */
   color: #fff;
 }
-
 /* Background */
 body {
   height: 100vh;
@@ -15,36 +12,24 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  flex-wrap: wrap;
-
-  /* !IMPORTANT! */
-  /* Must alter height of image, so it scales, or find new image. */
-  background-image: url("images/background.jpg"); /* Adds background image to entire page */
-  background-size: cover; /* Resizes background image to cover entire page */
-  background-position: center; /* Centers background image on page */
-  background-repeat: no-repeat; /* Prevents background image from repeating */
+  /* Background Image */
+  background-image: url("images/background.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   background-blend-mode: multiply;
-
+  /* Fixes the image in place */
+  background-attachment: fixed;
+  /* Styling image */
   background-color: #444;
   text-align: center;
-  flex: 1;
 }
-
-/* App Container */
-.app-container {
-  height: fit-content;
-  width: 900px;
-}
-
 /* Questions */
 .question-container {
   margin: 20px;
 }
 .question-container h2 {
   margin: 10px;
-}
-
-#first-choice {
 }
 .a,
 .x,
@@ -53,11 +38,10 @@ body {
   margin-right: 20px;
   gap: 20px;
 }
-
 /* Results */
 .result-container {
+  padding: 10px;
 }
-
 #result {
   margin: 10px;
 }
@@ -68,7 +52,6 @@ body {
 .five {
   padding: 4px;
 }
-
 /* Buttons */
 button {
   height: 40px;
@@ -80,27 +63,19 @@ button {
   flex: 1;
   gap: 20px;
 }
-
 button:hover {
   background-color: #333;
   color: #fff;
   cursor: pointer;
   flex: 1;
 }
-
 /* Smaller Screens */
 /* Styles for screens smaller than 768px */
 @media (max-width: 768px) {
-  /* Adjust the width of the layout */
-  .app-container {
-    width: 90%;
-  }
-
   /* Change the font size of the headings */
   h2 {
     font-size: 22px;
   }
-
   /* Make the buttons smaller */
   button {
     width: 80px;
@@ -108,7 +83,6 @@ button:hover {
     font-size: 14px;
   }
 }
-
 /* Footer */
 footer {
   position: absolute;
